--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@tanstack/react-query": "^5.56.2",
+    "@vercel/og": "^0.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.21.7",
