--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@tanstack/react-query": "^5.56.2",
     "@vercel/og": "^0.8.5",
+    "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.21.7",
